# wsj-adapter

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPENDENCY_ANALYSIS.md  INSTALL.md  LICENCE  MANIFEST.in  README.md  debug_extraction.py  example_usage.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.py  setup.py  test_functionality.py  test_newsletter_extraction.py
examples/: README.md  advanced_usage.py  basic_usage.py  data_analysis.py
src/wsj/: wsj_scrapper.py
src/wsj_adapter/: __init__.py  wsj_adapter.py
src/wsj_scrapper/: __init__.py  wsj_scrapper.py
tests/: __init__.py  test_adapter.py  test_integration.py  test_utils.py
