[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wsj-scrapper"
version = "0.0.1"
description = "A package to download articles from the Wall Street Journal via the Wayback Machine."
readme = "README.md"
license = "MIT"
authors = [
    {name = "Ariana Christodoulou", email = "ariana.chr@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: News/Diary",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "pandas>=1.5.0",
    "requests>=2.28.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "coverage>=7.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "coverage>=7.0.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/ariana-ch/wsj-scrapper"
Repository = "https://github.com/ariana-ch/wsj-scrapper"
Issues = "https://github.com/ariana-ch/wsj-scrapper/issues"
Documentation = "https://github.com/ariana-ch/wsj-scrapper#readme"
Changelog = "https://github.com/ariana-ch/wsj-scrapper/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"